--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-alert": "^7.0.2",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "ua-parser-js": "^0.7.22"
   },
   "scripts": {
     "start": "react-scripts start",
